# PreREISE

./: .git-blame-ignore-revs  .gitignore  ATTRIBUTION.md  DownloadEIAData_API.ipynb  EIAdata_checks.ipynb  Pipfile  README  README.md  pytest.ini  readEIAxlsx.ipynb  requirements.txt  requirements_freeze.txt  setup.cfg  setup.py  testEIA.ipynb  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  data-intake.md
.github/workflows/: ci-lint.yml  ci-test.yml  coverage.yml  external.yml  lint.yml  packages.yml  test.yml
call/: call.py
call/test/: test_call.py
docs/: demand_profiles.md  hydro_profiles.md  index.rst  solar_profiles.md  wind_profiles.md
docs/demand/historical/: eastern.rst  texas.rst  western.rst
docs/demand/nrel/: efs.rst
docs/demand/transportation_electrification/: data.rst  manual.rst  methodology.rst  sources.rst  summary.rst
docs/hydro/: eastern.rst  texas.rst  western.rst
docs/hydro/legacy/: capacity_factor.rst
docs/renewables/: download.rst  notebook.rst
docs/renewables/solar/: method.rst  nsrdb.rst  wind.rst
docs/renewables/wind/: hrrr.rst  method.rst  rap.rst
prereise/: __init__.py
prereise/call/: __init__.py  add_path.m  call.py  const.py
prereise/call/test/: __init__.py  (+1 more)
prereise/cli/: constants.py  data_sources.py  helpers.py
prereise/gather/: Readme.txt  __init__.py  const.py  constants.py  gather.py  get_monthly_net_generation.py  helpers.py  impute.py  rate_limit.py  request_util.py  translate_zones.py  trim_eia_form_923.py
prereise/utility/: generate_rural_shapefiles.py  shapefile.py  translate_urban_rural_to_usa_tamu.py  translate_zones.py
(+1009 files in other folders)
