[metadata]
name = prereise
version = 0.4
author = Kaspar Mueller
author_email = kaspar@breakthroughenergy.org
description = Create and run an energy scenario
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Breakthrough-Energy/PreREISE
project_urls =
    Bug Tracker = https://github.com/Breakthrough-Energy/PreREISE/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
packages = find:
python_requires = >=3.7

[options.package_data]
prereise = gather/*/data/*, gather/*/*/data/*, gather/data/*
