[metadata]
name = prereise
version = 0.4.1
author = Breakthrough Energy
author_email = sciences@breakthroughenergy.org
description = Create and run an energy scenario
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Breakthrough-Energy/PreREISE
project_urls =
    Bug Tracker = https://github.com/Breakthrough-Energy/PreREISE/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
python_requires = >=3.8

[options.package_data]
prereise = gather/**/data/**
